# Pro4_Temp

./: .gitignore  README.md
ESP32S3/: ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
ESP32S3/docs/: API.md  DEVELOPMENT.md  HARDWARE.md  SETUP.md  protocol-entries.txt
ESP32S3/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  file_handler.c  file_handler.h  http_server.c  http_server.h  webdrive_config.h  wifi_ap.c  wifi_ap.h
ESP32S3/main/frontend/: app.js  index.html  style.css
PI/: keylogger.py  keystrokes.html  keystrokes.txt  make_keystroke_html.py  readme.txt  setup_hid_gadget.sh
